--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -1,16 +1,22 @@
 {% extends "govuk/template.njk" %}
 
 {% block head %}
-  <link href="{{ '/assets/css/app.css' | assetMap }}" rel="stylesheet"/>
+  <link href="{{ '/assets/css/app.css' | assetMap }}" rel="stylesheet" />
 {% endblock %}
 
-{% block pageTitle %}{{pageTitle | default(applicationName)}}{% endblock %}
+{% block pageTitle %}
+  {{ pageTitle | default(applicationName) }}
+{% endblock %}
 
 {% block header %}
   {% include "./header.njk" %}
 {% endblock %}
 
-{% block bodyStart %}
+{% block main %}
+  <main class="govuk-main-wrapper" id="main-content" role="main">
+    {% block beforeContent %}{% endblock %}
+    {% block content %}{% endblock %}
+  </main>
 {% endblock %}
 
 {% block bodyEnd %}
