--- a/server/views/pages/applications.njk
+++ b/server/views/pages/applications.njk
@@ -54,7 +54,7 @@
           <li class="applications-landing-page__list-menu-item govuk-!-padding-top-3 govuk-!-padding-bottom-3 govuk-!-margin-bottom-0">
             {{ govukTag({
               text: item.tagText,
-              classes: "applications-landing-page__list-menu-item-notification govuk-tag--red"
+              classes: "applications-landing-page__list-menu-item-notification govuk-tag--red govuk-!-margin-right-1"
             }) }} 
             <a href="{{ item.path }}">{{ item.name }}</a>
           </li>
