--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -6,6 +6,9 @@ $govuk-page-width: $moj-page-width;
 
 @import 'govuk-frontend/dist/govuk/index';
 @import '@ministryofjustice/frontend/moj/all';
+@import 'node_modules/@ministryofjustice/hmpps-connect-dps-components/dist/assets/footer';
+@import 'node_modules/@ministryofjustice/hmpps-connect-dps-components/dist/assets/header-bar';
+
 
 @import './components/header-bar';
 @import './local';
