update button path

--- a/server/views/pages/applications.njk
+++ b/server/views/pages/applications.njk
@@ -24,7 +24,7 @@
   <div class="govuk-body govuk-width-container govuk-!-padding-top-5 govuk-!-padding-bottom-5">
     {{ govukButton({
       text: "Log an application",
-      href: "#"
+      href: "/log/application-type"
     }) }}
 
     {% for section in sections %}
