update nav links

--- a/server/views/pages/view-application/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/view-application/swap-visiting-orders-for-pin-credit.njk
@@ -13,18 +13,18 @@
     {{ mojSubNavigation({
       label: 'Sub navigation',
       items: [{
-        text: 'Applications',
-        href: '#1',
+        text: 'Application',
+        href: "",
         active: true
       }, {
         text: 'Comments',
-        href: '#2'
+        href: ""
       }, {
         text: 'Action and reply',
-        href: '#3'
+        href: ""
       }, {
         text: 'History',
-        href: '#4'
+        href: ""
       }]
     }) }}
 
