--- a/server/views/pages/view-application/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/view-application/swap-visiting-orders-for-pin-credit.njk
@@ -64,7 +64,7 @@
                 text: "Application type"
               },
               value: {
-                text: ""
+                text: "Swap visiting orders (VOs) for PIN credit"
               }
             },
             {
