--- a/server/views/pages/submit-application/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/submit-application/swap-visiting-orders-for-pin-credit.njk
@@ -1,7 +1,3 @@
-{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
-{% from "govuk/components/button/macro.njk" import govukButton %}
-{% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
-
 {% extends "../../partials/layout.njk" %}
 
 {% set pageTitle = applicationName + " - " + title %}
@@ -9,10 +5,30 @@
 
 {% block content %}
   <div class="govuk-body govuk-width-container">
-    {{ govukBackLink({
-      text: "Back",
-      href: "/"
-    }) }}
-
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+        <div class="govuk-panel govuk-panel--confirmation">
+              <div class="govuk-panel__body govuk-!-padding-bottom-3">
+                Swap VOs for PIN credit
+              </div>
+              <h1 class="govuk-panel__title">
+                Application submitted
+              </h1>
+        </div>
+      </div>
+    </div>
+    <p class="govuk-body-l">{{ application.dept }} now has this application.</p>
+    <p class="govuk-body">You can now:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>
+        <a href="/view/:application.id">View this application</a>
+      </li>
+      <li>
+        <a href="#">Add another application</a>
+      </li>
+      <li>
+        <a href="#">Return to applications dashboard</a>
+      </li>
+    </ul>
   </div>
 {% endblock %}
