--- a/server/views/pages/submit-application/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/submit-application/swap-visiting-orders-for-pin-credit.njk
@@ -1,6 +1,4 @@
-{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
-{% from "govuk/components/button/macro.njk" import govukButton %}
-{% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
+{% from "govuk/components/panel/macro.njk" import govukPanel %}
 
 {% extends "../../partials/layout.njk" %}
 
@@ -9,10 +7,31 @@
 
 {% block content %}
   <div class="govuk-body govuk-width-container">
-    {{ govukBackLink({
-      text: "Back",
-      href: "/"
-    }) }}
-
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+        
+        {{ govukPanel({
+            titleText: "Application submitted",
+            html: "Swap VOs for PIN credit"
+          }) }}
+          
+      </div>
+    </div>
+   
+    <p class="govuk-body-l">{{ application.dept }} now has this application.</p>
+    <p class="govuk-body">You can now:</p>
+    
+    <ul class="govuk-list govuk-list--bullet">
+      <li>
+        <a href="/view/:application.id">View this application</a>
+      </li>
+      <li>
+        <a href="#">Add another application</a>
+      </li>
+      <li>
+        <a href="#">Return to applications dashboard</a>
+      </li>
+    </ul>
+    
   </div>
 {% endblock %}
