Added navigation links to the submission page

--- a/server/views/pages/submit-application/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/submit-application/swap-visiting-orders-for-pin-credit.njk
@@ -26,10 +26,10 @@
         <a href="/view/:application.id">View this application</a>
       </li>
       <li>
-        <a href="#">Add another application</a>
+        <a href="/log/application-type">Add another application</a>
       </li>
       <li>
-        <a href="#">Return to applications dashboard</a>
+        <a href="/">Return to applications dashboard</a>
       </li>
     </ul>
     
