--- a/server/views/pages/submit-application/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/submit-application/swap-visiting-orders-for-pin-credit.njk
@@ -18,7 +18,7 @@
       </div>
     </div>
    
-    <p class="govuk-body-l">{{ application.dept }} now has this application.</p>
+    <p class="govuk-body-l">{{ application.assignedGroup.name }} now has this application.</p>
     <p class="govuk-body">You can now:</p>
     
     <ul class="govuk-list govuk-list--bullet">
