--- a/server/views/pages/view-application/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/view-application/swap-visiting-orders-for-pin-credit.njk
@@ -52,7 +52,7 @@
               actions: {
                 items: [
                   {
-                    href: "#",
+                    href: "/applications/" + departmentName + "/" + application.requestedBy.id + "/" + application.id + "/forward",
                     text: "Forward",
                     visuallyHiddenText: "department"
                   }
