improve folder + file structure

--- a/server/views/pages/log-application/select-application-type/index.njk
+++ b/server/views/pages/log-application/select-application-type/index.njk
@@ -3,7 +3,7 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
-{% extends "../../partials/layout.njk" %}
+{% extends "../../../partials/layout.njk" %}
 
 {% set pageTitle = applicationName + " - " + title %}
 {% set mainClasses = "app-container govuk-body applications-landing-page" %}
