--- a/server/views/pages/log-application/application-details/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/log-application/application-details/swap-visiting-orders-for-pin-credit.njk
@@ -2,7 +2,7 @@
 {% from "govuk/components/character-count/macro.njk" import govukCharacterCount %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
-{% extends "../../partials/layout.njk" %}
+{% extends "../../../partials/layout.njk" %}
 
 {% set pageTitle = applicationName + " - " + title %}
 {% set mainClasses = "app-container govuk-body applications-landing-page" %}
