--- a/server/views/pages/log-application/confirm/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/log-application/confirm/swap-visiting-orders-for-pin-credit.njk
@@ -2,7 +2,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 
-{% extends "../../partials/layout.njk" %}
+{% extends "../../../partials/layout.njk" %}
 
 {% set pageTitle = applicationName + " - " + title %}
 {% set mainClasses = "app-container govuk-body applications-landing-page" %}
