--- a/server/views/pages/log-application/prisoner-details/index.njk
+++ b/server/views/pages/log-application/prisoner-details/index.njk
@@ -5,7 +5,7 @@
 
 {%- from "moj/components/date-picker/macro.njk" import mojDatePicker -%}
 
-{% extends "../../partials/layout.njk" %}
+{% extends "../../../partials/layout.njk" %}
 
 {% set pageTitle = applicationName + " - " + title %}
 {% set mainClasses = "app-container govuk-body applications-landing-page" %}
