fix layout paths

--- a/server/views/pages/log-application/submit/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/log-application/submit/swap-visiting-orders-for-pin-credit.njk
@@ -1,6 +1,6 @@
 {% from "govuk/components/panel/macro.njk" import govukPanel %}
 
-{% extends "../../partials/layout.njk" %}
+{% extends "../../../partials/layout.njk" %}
 
 {% set pageTitle = applicationName + " - " + title %}
 {% set mainClasses = "app-container govuk-body applications-landing-page" %}
