--- a/server/views/pages/applications/forward/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/applications/forward/swap-visiting-orders-for-pin-credit.njk
@@ -3,7 +3,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
-{% extends "../../partials/layout.njk" %}
+{% extends "../../../partials/layout.njk" %}
 
 {% set pageTitle = applicationName + " - " + title %}
 {% set mainClasses = "app-container govuk-body applications-landing-page" %}
