--- a/server/views/pages/applications/view/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/applications/view/swap-visiting-orders-for-pin-credit.njk
@@ -157,7 +157,7 @@
               actions: {
                 items: [
                   {
-                    href: "#",
+                    href: "/applications/" + departmentName + "/" + application.requestedBy.username + "/" + application.id + "/change",
                     text: "Change",
                     visuallyHiddenText: "details"
                   }
