--- a/server/views/pages/log-application/confirm/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/log-application/confirm/swap-visiting-orders-for-pin-credit.njk
@@ -19,8 +19,6 @@
         <span class="govuk-caption-xl">{{ appTypeTitle }}</span>
         <h1 class="govuk-heading-xl govuk-!-margin-top-0">Check details</h1>
 
-        {% set actionItems = [] if isUpdate else [{ href: "#", text: "Change", visuallyHiddenText: "application type" }] %}
-
         {{ govukSummaryList({
           classes: "govuk-!-margin-bottom-9",
           rows: [
@@ -31,7 +29,7 @@
               value: {
                 text: "Swap VOs for pin credit"
               },
-              actions: { items: actionItems }
+              actions: { items: [] if isUpdate else [{ href: "#", text: "Change", visuallyHiddenText: "application type" }] }
             }
           ]
         }) }}
@@ -49,13 +47,7 @@
                 text: applicationData.prisonerName
               },
               actions: {
-                items: [
-                  {
-                    href: "#",
-                    text: "Change",
-                    visuallyHiddenText: "prisoner"
-                  }
-                ]
+                items: [] if isUpdate else [{ href: "#", text: "Change", visuallyHiddenText: "prisoner" }]
               }
             },
             {
@@ -66,13 +58,7 @@
                 text: applicationData.date
               },
               actions: {
-                items: [
-                  {
-                    href: "#",
-                    text: "Change",
-                    visuallyHiddenText: "submitted on"
-                  }
-                ]
+                items: [] if isUpdate else [{ href: "#", text: "Change", visuallyHiddenText: "submitted on" }]
               }
             }
           ]
