--- a/assets/scss/views/_applications.scss
+++ b/assets/scss/views/_applications.scss
@@ -41,3 +41,16 @@
     }
   }
 }
+
+.app-message {
+  padding: 15px 0;
+  border-top: 1px solid #b1b4b6;
+  border-bottom: 1px solid #b1b4b6;
+  margin-bottom: -1px;
+}
+.app-message:last-of-type {
+  border-bottom: 1px solid #b1b4b6;
+}
+.app-message .app-messages-metadata {
+  color: #505a5f;
+}
