adding tests for history tab and small fixes

--- a/server/views/pages/applications/history/index.njk
+++ b/server/views/pages/applications/history/index.njk
@@ -9,7 +9,7 @@
   <div class="govuk-body govuk-width-container govuk!">
 
    <span class="govuk-caption-xl">Business Hub applications</span>
-   <h1 class="govuk-heading-xl govuk-!-margin-top-0">Swap visiting orders (VOs) for PIN credit</h1>
+   <h1 class="govuk-heading-xl govuk-!-margin-top-0">{{ h1 }}</h1>
 
    {{ mojSubNavigation({
      label: 'Sub navigation',
@@ -53,9 +53,9 @@
                Forwarded to OMU.
               </div>
 
-            </div>
+           </div>
 
-            <div class="app-message govuk-body">
+           <div class="app-message govuk-body">
 
               <div class="app-messages-metadata">
                 S. Caroll | 16 March 2025 at 11:18
@@ -64,12 +64,12 @@
                 Marked as Approved.
               </div>
 
-            </div>
+           </div>
          
         </div>
       </div>
 
     </div>  
-    
+
 {% endblock %}
 
