add closed app template and update routes

--- a/server/views/pages/applications/action/index.njk
+++ b/server/views/pages/applications/action/index.njk
@@ -50,7 +50,11 @@
       }]
     }) }}
 
-    {% include "./pending.njk" %}
+    {% if isAppPending %}
+      {% include "./pending.njk" %}
+    {% else %}
+      {% include "./closed.njk" %}
+    {% endif %}
 
   </div>
 {% endblock %}
