--- a/server/views/pages/applications/history/index.njk
+++ b/server/views/pages/applications/history/index.njk
@@ -9,7 +9,7 @@
   <div class="govuk-body govuk-width-container govuk!">
 
    <span class="govuk-caption-xl">Business Hub applications</span>
-   <h1 class="govuk-heading-xl govuk-!-margin-top-0">{{ h1 }}</h1>
+   <h1 class="govuk-heading-xl govuk-!-margin-top-0">{{ title }}</h1>
 
    {{ mojSubNavigation({
      label: 'Sub navigation',
@@ -34,36 +34,33 @@
         <h2 class="govuk-heading-m">History of this application</h2>
 
            <div class="app-message govuk-body">
-
               <div class="app-messages-metadata">
                 J. Smith | 14 March 2025 at 09:18
                </div>
+              
                <div class="app-messages-content">
                 Logged with Business Hub.
                </div> 
-
            </div>
 
            <div class="app-message govuk-body">
-
               <div class="app-messages-metadata">
                S. Caroll | 15 March 2025 at 10:18
               </div>
+              
               <div class="app-messages-content">
                Forwarded to OMU.
               </div>
-
-           </div>
+           </div>   
 
            <div class="app-message govuk-body">
-
               <div class="app-messages-metadata">
                 S. Caroll | 16 March 2025 at 11:18
               </div>
+
               <div class="app-messages-content">
                 Marked as Approved.
               </div>
-
            </div>
          
         </div>
