--- a/server/views/pages/applications/action/index.njk
+++ b/server/views/pages/applications/action/index.njk
@@ -3,8 +3,6 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
-{%- from "moj/components/sub-navigation/macro.njk" import mojSubNavigation -%}
-
 {% extends "../../../partials/layout.njk" %}
 
 {% set pageTitle = applicationName + " - " + title %}
@@ -30,25 +28,10 @@
     {% endif %}
 
     <span class="govuk-caption-xl">Swap VOs for PIN credit</span>
-    <h1 class="govuk-heading-xl govuk-!-margin-top-0">Action and reply</h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-top-0">{{ title }}</h1>
 
-    {{ mojSubNavigation({
-      label: 'Sub navigation',
-      items: [{
-        text: 'Application',
-        href: "/applications/" + departmentName + "/" + application.requestedBy.username + "/" + application.id
-      }, {
-        text: 'Comments',
-        href: "/applications/" + departmentName + "/" + application.requestedBy.username + "/" + application.id + "/comments"
-      }, {
-        text: 'Action and reply',
-        href: "/applications/" + departmentName + "/" + application.requestedBy.username + "/" + application.id + "/reply",
-        active: true
-      }, {
-        text: 'History',
-        href: "/applications/" + departmentName + "/" + application.requestedBy.username + "/" + application.id + "/history"
-      }]
-    }) }}
+    {% set activeTab = 'reply' %}
+    {% include "../partials/sub-navigation.njk" %}
 
     {% if isAppPending %}
       {% include "./pending.njk" %}
