--- a/assets/scss/views/_applications.scss
+++ b/assets/scss/views/_applications.scss
@@ -1,6 +1,6 @@
 .applications-landing-page {
   &__banner {
-    margin-top: -40px;
+    margin-top: govuk-spacing(-7);
     background: #263135;
     color: govuk-colour('white');
 
@@ -10,34 +10,30 @@
       color: inherit;
     }
   }
+}
 
-  &__list-menu {
+.card-group {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: govuk-spacing(3);
+  padding: 0;
+
+  &__item {
     display: flex;
-    flex-wrap: wrap;
+    list-style-type: none;
+    margin-bottom: govuk-spacing(0);
+  }
 
-    &-item {
-      flex-basis: calc(50% - 10px);
-      box-sizing: border-box;
-      border-top: 1px solid $govuk-border-colour;
+  .card {
+    margin-bottom: govuk-spacing(5);
+    background: govuk-colour('white');
+    border: 1px solid #d8dde1;
+    position: relative;
+    width: 100%;
+    padding: govuk-spacing(5);
 
-      &:nth-child(odd) {
-        margin-right: 10px;
-      }
-
-      &:nth-child(even) {
-        margin-left: 10px;
-      }
-
-      a {
-        color: $govuk-link-colour;
-      }
-
-      &-notification {
-        font-weight: normal;
-        border-radius: 20px;
-        font-size: 1rem;
-        color: #942514;
-      }
+    &--clickable {
+      border-bottom-width: govuk-spacing(1);
     }
   }
 }
