--- a/assets/scss/views/_applications.scss
+++ b/assets/scss/views/_applications.scss
@@ -37,3 +37,18 @@
     }
   }
 }
+
+.app-message {
+  padding: govuk-spacing(3) 0;
+  border-top: 1px solid $govuk-border-colour;
+  border-bottom: 1px solid $govuk-border-colour;
+  margin-bottom: -1px;
+}
+
+.app-message:last-of-type {
+  border-bottom: 1px solid $govuk-border-colour;
+}
+
+.app-message .app-messages-metadata {
+  color: govuk-colour("dark-grey");
+}
