--- a/server/views/pages/applications.njk
+++ b/server/views/pages/applications.njk
@@ -36,7 +36,7 @@
         <li class="govuk-grid-column-one-third card-group__item">
           <div class="card card--clickable" data-testid="view-all-applications">
             <h2 class="govuk-heading-m card__heading">
-              <a class="govuk-link card__link" href="/applications/pending">View all applications</a>
+              <a class="govuk-link card__link" href="/applications">View all applications</a>
             </h2>
             <p class="govuk-body card__description">View all applications logged in your prison.</p>
           </div>
